# c-practice

black_jack/: blackjack  main.c
bump_allocator/: m  main.c
celsius_farenheit/: fahr  main.c
check_repeat_num/: main.c
clox/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  debug.h  main.c  memory.h  scanner.c  scanner.h  value.c  value.h  vm.c  vm.h
cpp_brainfuck_interpreter/: brainfuck  build.sh  main.cpp
cpp_byexample/: example.txt  file  file.cpp
cpp_cron/: main  main.cpp
cpp_inventory/: build.sh  database.txt  inventory  main.cpp
cpp_server/: CMakeLists.txt  TODO.txt  build.sh
cpp_server/public/: index.html
cpp_server/src/: main.cpp
cpp_server/src/controllers/: HelloController.cpp  HelloController.h
cpp_socket/: build.sh  http_server.cpp  http_server.h  main.cpp  server
deal/: main  main.c
interest_rates/: main  main.c
raylib/: Window  kernel.txt  macos_build.sh  out.txt  process.txt  window.c
selection_sort/: main  main.c
unix_utils/: text.txt  wcat  wcat.c
word-line-counting/: main  main.c
